fix(server): 배포 도메인 CORS 설정 추가